# consolidate-markdown

./: .ClaudePlan  .Plan  .coveragerc  .cursorrules  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Plan.md  README.md  config.template.toml  config.toml.example  document.py  package-lock.json  pyproject.toml
.codeium/windsurf/memories/: global_rules.md
.cursor/prompts/: next step in plan.md  startup with existing docs.md  startup.md
.cursor/rules/: 00-ai-startup.rules.mdc  00-base.md  00-base.rules.mdc  00-bootup.md  00-startup.md  00-template.md  01-validation.md  02-base.md  10-python-style.md  10-python-style.rules.mdc  11-python-typing.md  11-python-typing.rules.mdc  12-python-testing.md  12-python-testing.rules.mdc  20-markdown-style.md  20-markdown-style.rules.mdc  21-markdown-docs.md  21-markdown-docs.rules.mdc  30-git-workflow.md  30-git-workflow.rules.mdc  31-pre-commit.md  31-pre-commit.rules.mdc  40-error-handling.md  40-error-handling.rules.mdc  41-logging.md  41-logging.rules.mdc  50-operation-modes.md  50-operation-modes.rules.mdc  60-vision-model.rules.mdc  70-command-triggers.md  70-command-triggers.rules.mdc  consolidated.rules  cursor-tools.mdc  documentation.rules  globs.yaml  planning.rules
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  tests.yml  validate-rules.yml
docs/: README.md  architecture.md  caching.md  claude-attachments.md  configuration.md  data_flow.md  document_conversion.md  enhanced-output.md  examples.md  image-analysis.md  installation.md  logging.md  model-comparison.md  model_performance.md  prd.md  processors.md  resources.md  testing.md  troubleshooting.md  usage.md
docs/rules/: creation.md  overview.md
docs/schemas/: README.md  bear_export.md  chatgpt_export.md  claude_export.md  xbookmarks_export.md
scripts/: toggle_input_folders.py
src/consolidate_markdown/: __init__.py  __main__.py  cache.py  config.py  exceptions.py  log_setup.py  logging.py  output.py  runner.py  utils.py  version.py
src/consolidate_markdown/attachments/: __init__.py  document.py  gpt.py  image.py  logging.py  processor.py
src/consolidate_markdown/processors/: __init__.py  base.py  bear.py  chatgpt.py  claude.py  result.py  xbookmarks.py
src/validation/: __init__.py  conflicts.py  rules.py  summary.py
tests/: conftest.py  run_issue_tests.py  test_chatgpt_processor.py
tests/fixtures/: README.md
tests/fixtures/attachments/documents/: sample.csv  sample.docx  sample.xlsx
tests/fixtures/attachments/text/: sample.json  sample.txt
tests/fixtures/bear/: basic_note.md  format_test.md
tests/fixtures/bear/format_test/: sample.csv
tests/fixtures/xbookmarks/sample_bookmark/: index.md
tests/integration/: test_full_pipeline.py  test_live_api.py  test_rule_system.py
tests/unit/: README.md  test_attachment_logging.py  test_attachments.py  test_base_processor.py  test_cache.py  test_chatgpt.py  test_chatgpt_processor.py  test_chatgpt_processor_issues.py  test_claude_processor.py  test_claude_processor_additional.py  test_claude_processor_issues.py  test_cli.py  test_config.py  test_document_formats.py  test_exceptions.py  test_glob_matching.py  test_gpt.py  test_image.py  test_image_processor_issues.py  test_log_setup.py  test_logging.py  test_main.py  test_output.py  test_output_functions.py  test_processors.py  test_progress.py  test_result.py  test_rule_validation.py  test_runner.py  test_summary.py  test_xbookmarks_processor_issues.py  test_xbookmarks_processor_media.py
tools/: convert_chats.py
