[project]
name = "consolidate_markdown"
version = "1.0.0"
description = "Consolidate Markdown files from multiple sources with AI-powered image analysis"
requires-python = ">=3.12"
dependencies = [
  # Core dependencies
  "tomli~=2.0.1",
  "tomli-w~=1.0.0",
  "pathlib~=1.0.1",

  # API clients
  "openai~=1.0.0",

  # Image processing
  "pillow~=10.0.0",
  "cairosvg~=2.7.0",

  # Document processing
  "pandas~=2.1.0",
  "tabulate~=0.9.0",
  "openpyxl~=3.1.0",
  "beautifulsoup4~=4.12.0",
  "markitdown>=0.0.1a3",  # Microsoft's MarkItDown for document conversion
  "pymupdf~=1.23.8",      # Better PDF handling than Microsoft's MarkItDown
  "reportlab~=4.1.0",     # PDF generation

  # UI and formatting
  "rich~=13.7.0",
]

[project.optional-dependencies]
dev = [
  # Testing
  "pytest~=7.0.0",
  "pytest-cov~=4.1.0",

  # Code quality
  "black>=23.0.0",
  "isort~=5.0.0",
  "mypy~=1.0.0",
  "types-PyYAML~=6.0.0",
  "types-Pillow~=10.0.0",
  "ruff~=0.1.0",          # Fast linter
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
build-dir = ".cm/build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/consolidate_markdown --cov-report=term-missing:skip-covered --cov-report=html:coverage_html"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["consolidate_markdown"]

[project.scripts]
consolidate-markdown = "consolidate_markdown.__main__:main"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
